log
Wed, Mar 19, 2025  8:28:45 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:40:11 AM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:59:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int total = first(L);
                ^~~~~
exercises.c:60:9: error: statement with no effect [-Werror=unused-value]
    for(L!= NULL)
         ^
exercises.c:60:16: error: expected ';' before ')' token
    for(L!= NULL)
                ^
exercises.c:60:16: error: expected expression before ')' token
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       total += L;
       ^~~~~
exercises.c:62:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       total += L;
             ^~
cc1.exe: all warnings being treated as errors
Compilation failed
30d616b
Wed, Mar 19, 2025  8:40:32 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
678b115
Wed, Mar 19, 2025  8:41:11 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:18: error: lvalue required as unary '&' operand
       pushBack(L,&(int *)k);
                  ^
Compilation failed
cba2334
Wed, Mar 19, 2025  8:41:25 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:18: error: lvalue required as unary '&' operand
       pushBack(L,&(int )k);
                  ^
Compilation failed
4360bf4
Wed, Mar 19, 2025  8:42:40 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2da0cc7
